[package]
name = "payment_engine"
version = "0.1.0"
authors = ["Beknar Askarov <beknar.askarov@ing.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.3"
serde = { version = "1.0.116", features = ["derive"] }
clap = "3.0.0-beta.2"
insta = "1.1.0"