[package]
name = "payment_engine"
version = "0.1.0"
authors = ["Beknar Askarov <beknar.askarov@ing.com>"]
edition = "2018"

[lib]
name = "pe_lib"
path = "src/lib.rs"

[[bin]]
name = "pe_cli"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.3"
serde = { version = "1.0.116", features = ["derive"] }
clap = "3.0.0-beta.2"
rust_decimal = { version = "1.8.1", features = ["serde"] }

[dev-dependencies]
insta = { version = "1.1.0", features = ["csv", "glob"] }
itertools = "0.9.0"